RESOLVED FIXED238381
Fix runtime expose scope check for shadow realms
https://bugs.webkit.org/show_bug.cgi?id=238381
Summary Fix runtime expose scope check for shadow realms
Joseph Griego
Reported 2022-03-25 09:30:21 PDT
Fix runtime expose scope check for shadow realms
Attachments
Patch (6.79 KB, patch)
2022-03-25 09:36 PDT, Joseph Griego
no flags
Patch (16.03 KB, patch)
2022-03-25 14:13 PDT, Joseph Griego
darin: review+
Patch (16.13 KB, patch)
2022-04-08 14:48 PDT, Joseph Griego
no flags
Patch (15.01 KB, patch)
2022-04-18 10:29 PDT, Joseph Griego
no flags
Joseph Griego
Comment 1 2022-03-25 09:36:06 PDT
Joseph Griego
Comment 2 2022-03-25 14:13:57 PDT
Created attachment 455798 [details] Patch update binding test expectations
Radar WebKit Bug Importer
Comment 3 2022-04-01 09:31:16 PDT
Darin Adler
Comment 4 2022-04-08 09:49:26 PDT
Comment on attachment 455798 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=455798&action=review > Source/WebCore/bindings/scripts/CodeGeneratorJS.pm:4010 > + return "([&] { auto* base = $globalObjectPtr; auto obj = jsDynamicCast<$wrapperType*>(base->vm(), base); return obj && $sideCondition; })()"; WebKit coding style uses words rather than non-word abbreviations. So this would be "object" rather than "obj". Same in the many other cases below and above.
Joseph Griego
Comment 5 2022-04-08 10:48:18 PDT
Thanks Darin, and apologies; I need to add a pre-commit hook for myself to yell when a variable is named `obj`! Old habits are hard to break
Joseph Griego
Comment 6 2022-04-08 14:48:39 PDT
Joseph Griego
Comment 7 2022-04-18 10:29:35 PDT
EWS
Comment 8 2022-04-19 10:26:11 PDT
Committed r293021 (249760@main): <https://commits.webkit.org/249760@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 457810 [details].
Note You need to log in before you can comment on or make changes to this bug.