Fix runtime expose scope check for shadow realms https://bugs.webkit.org/show_bug.cgi?id=238381

LayoutTests/imported/w3c:

Reviewed Darin Adler.

Updated idlharness expectations to reflect the fix for
`AbortController.timeout` visibility

Patch by Joseph Griego <jgriego@igalia.com> on 2022-04-19

* web-platform-tests/dom/idlharness-shadowrealm.window-expected.txt:

Source/WebCore:

Patch by Joseph Griego <jgriego@igalia.com> on 2022-04-19
Reviewed by Darin Adler.

Because shadow realms re-use their incubating realm's execution context
it doesn't make sense to check the `is${expose_scope}GlobalScope`
methods on `ScriptExecutionContext` anymore--instead, we'll use the type
information on the `JSGlobalScope` wrapper

This is at least justified in part by the fact that
`JSDOMGlobalObject#scriptExecutionContext` already does this internally
today to actually fetch the execution context, so, we can at least be
assured that this behaves the same way.

Some global scopes (notably, here, `AudioWorklet`) do not have distinct
wrapper types so we need to add a side condition to the generated code,
which we do after the type check.

Also removes `ScriptExecutionContext::isShadowRealmGlobalScope` as it's
now dead code and was never overridden anyways (a mistake left over
from the initial integration)

Tests: idlharness tests, including fixed visibility of
`AbortController.timeout`

* bindings/scripts/CodeGeneratorJS.pm:
(GenerateRuntimeEnableConditionalStringForExposeScope):
* bindings/scripts/test/JS/JSExposedStar.cpp:
(WebCore::JSExposedStarPrototype::finishCreation):
* bindings/scripts/test/JS/JSTestDefaultToJSONFilteredByExposed.cpp:
(WebCore::JSTestDefaultToJSONFilteredByExposedPrototype::finishCreation):
(WebCore::jsTestDefaultToJSONFilteredByExposedPrototypeFunction_toJSONBody):
* bindings/scripts/test/JS/JSTestObj.cpp:
(WebCore::JSTestObjPrototype::finishCreation):
* dom/ScriptExecutionContext.h:
(WebCore::ScriptExecutionContext::isServiceWorkerGlobalScope const):
(WebCore::ScriptExecutionContext::isShadowRealmGlobalScope const): Deleted.

Canonical link: https://commits.webkit.org/249760@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@293021 268f45cc-cd09-0410-ab3c-d52691b4dbfc